@@ -25,6 +25,8 @@ logfile=/var/log/bartlby
 xlogfile=/dev/stdout
 daemon=true
 
+performance_dir=/storage/SF.NET/BARTLBY/bartlby-core/perf/
+
 shm_size=7
 
 
@@ -45,7 +47,7 @@ jabber_hjanuschka=klewan@dev.januschka.com
 #icq
 licq_fifo=/root/.licq/licq_fifo
 
-replication=true
+replication=false
 replicate_cnt=3
 replicate[1]=localhost
 replication_intervall=3600;
